chanhed auteur.html

--- a/auteur.html
+++ b/auteur.html
@@ -46,8 +46,11 @@
         </div>
         </section>
         <div class="section-divider"></div>
-        <h1>La musique écoutée : </h1>
+       
   <section>
+    <h1>La musique écoutée : </h1>
+    <h3>La chanson préféré pour ce moment</h3>
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2oV3Nc0ziVpilCAjpRyY8E?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     <h2>Tartak</h2>
     <div class="music-box">
       <iframe src="https://open.spotify.com/embed/playlist/1iw1HyH2xFmhNH7q06sF7e?si=OAJZWcKETVqF95rywjo7HA&pi=RnSoDidFTaurk" allowfullscreen=""
