Added some folders and changed some pages

--- a/auteur.html
+++ b/auteur.html
@@ -46,7 +46,11 @@
         </div>
         </section>
         <div class="section-divider"></div>
-       
+        <section>
+          <h1>Gallerie</h1>
+          <a href="gallerie.html">Voir ici</a>
+        </section>
+        <div class="section-divider"></div>
   <section>
     <h1>La musique écoutée : </h1>
     <h3>La chanson préféré pour ce moment</h3>
@@ -87,6 +91,7 @@
     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
     loading="lazy"></iframe>
   </div>
+ 
   </section>
     </main>
     <footer>
