--- a/auteur.html
+++ b/auteur.html
@@ -50,8 +50,9 @@
         <div class="section-divider"></div>
   <section>
     <h1>La musique écoutée : </h1>
-    <h3>La chanson préféré pour ce moment</h3>
+    <h3>Les chansons préférées pour ce moment</h3>
     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2oV3Nc0ziVpilCAjpRyY8E?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2jWGFfHtn6IhJxw4v0MxSn?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     <h2>Tartak</h2>
     <div class="music-box">
       <iframe src="https://open.spotify.com/embed/playlist/1iw1HyH2xFmhNH7q06sF7e?si=OAJZWcKETVqF95rywjo7HA&pi=RnSoDidFTaurk" allowfullscreen=""
