--- a/auteur.html
+++ b/auteur.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./images/Kyiv-oblast.png" type="image/x-icon">
     <title>Auteur</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
@@ -41,6 +42,13 @@
             <li>Airsoft</li>
             <li>Lego</li>
             <li>Memes</li>
+          </ul>
+          <h2><strong>Series préférées :</strong></h2>
+          <ul>
+            <li>Sherloh </li>
+            <li>Hotel Galicie </li>
+            <li>Simpsons</li>
+            <li>Futurama</li>
           </ul>
         </div>
         </div>
