--- a/novipetrivtsi.html
+++ b/novipetrivtsi.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./images/Novipetrivci_gerb.jpg" type="image/x-icon">
     <title>Novi Petrivtsi</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
