Changed some pages

--- a/mentionslegales.html
+++ b/mentionslegales.html
@@ -25,7 +25,7 @@
     </header>
     <main>
         <section id="mentions-legales">
-            <h1>📄 Mentions Légales</h1>
+            <h1>Mentions Légales</h1>
           
             <h2>1. Présentation du site</h2>
             <p>
@@ -38,7 +38,7 @@
               <li><strong>Numéro de SIRET :</strong> 123 456 789 00012</li>
               <li><strong>RCS :</strong>Zhytomyr</li>
               <li><strong>TVA intracommunautaire :</strong> FR123456789</li>
-              <li><strong>Responsable publication :</strong> Borodkin Oleksandr Stepanivych – contact@kivavoyage.ch</li>
+              <li><strong>Responsable publication :</strong> Borodkin Oleksandr Stepanovych – contact@kivavoyage.ch</li>
               <li><strong>Webmaster :</strong> RoukoJob contact@webmaster.ch</li>
               <li><strong>Webmaster 2 :</strong> YoptaPhone contact@yoptaphone.ch</li>
               <li><strong>Hébergeur :</strong> etml.ch</li>
