--- a/pereyaslav.html
+++ b/pereyaslav.html
@@ -26,38 +26,35 @@
     <main class="ville">
         <div class="box heraldique">
             <div>
-                <img src="" alt="Héraldique">
+                <img src="./images/Coat_of_arms_of_Pereiaslav.svg.png" alt="Héraldique">
                 <p>Héraldique</p>
             </div>
             <div>
-                <img src="" alt="Drapeau">
+                <img src="./images/Flag_of_Pereyaslav-Khmelnytsky.svg.png" alt="Drapeau">
                 <p>Drapeau</p>
-            </div>
-            <div>
-                <img src="" alt="Conseil de la ville">
-                <p>Conseil de la ville</p>
             </div>
         </div>
         <div class="box">
             <h2>la description de la ville</h2>
+            <p>Pereïaslav est une ville de l'oblast de Kiev, en Ukraine. Sa population s'élevait à 27 945 habitants en 2013.</p>
+            <p>Pereïaslav est située à proximité du réservoir de Kaniv sur le Dniepr et à 77 km au sud-est de Kiev.</p>
         </div>
         <div class="box">
             <h2>Les endroits à visiter</h2>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Polovtsiennes</li>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/e/e8/%D0%9F%D0%BE%D0%BB%D0%BE%D0%B2%D0%B5%D1%86%D0%BA%D0%BE%D0%B5_%D1%81%D0%B2%D1%8F%D1%82%D0%B8%D0%BB%D0%B8%D1%89%D0%B5_%D0%BA%D0%BE%D0%BD%D1%86%D0%B0_%D0%A5%D0%86%D0%86_%E2%80%94_%D0%BD%D0%B0%D1%87.jpg">
+                <li>Monastère de l'Ascension</li>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/c/c0/%D0%9F%D0%B5%D1%80%D0%B5%D1%8F%D1%81%D0%BB%D0%B0%D0%B2_%D0%90%D0%BD%D1%82%D0%BE%D0%BD_%D0%9F%D0%B5%D1%82%D1%80%D1%83%D1%81%D1%8C.jpg">
             </ul>
         </div>
         <div class="box">
             <h2>Gallerie</h2>
             <div class="gallerie">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/%D0%9F%D0%B0%D0%BC%27%D1%8F%D1%82%D0%BD%D0%B8%D0%BA_%D0%B2%D0%BE%D1%97%D0%BD%D0%B0%D0%BC-%D1%82%D0%B0%D0%BD%D0%BA%D1%96%D1%81%D1%82%D0%B0%D0%BC_%D0%9F%D0%B5%D1%80%D0%B5%D1%8F%D1%81%D0%BB%D0%B0%D0%B2_2015.jpg/1920px-%D0%9F%D0%B0%D0%BC%27%D1%8F%D1%82%D0%BD%D0%B8%D0%BA_%D0%B2%D0%BE%D1%97%D0%BD%D0%B0%D0%BC-%D1%82%D0%B0%D0%BD%D0%BA%D1%96%D1%81%D1%82%D0%B0%D0%BC_%D0%9F%D0%B5%D1%80%D0%B5%D1%8F%D1%81%D0%BB%D0%B0%D0%B2_2015.jpg" alt="">
+                <img src="https://upload.wikimedia.org/wikipedia/uk/3/39/%D0%9F%D0%B0%D0%BC%D1%8F%D1%82%D0%BD%D0%B8%D0%B9_%D0%B7%D0%BD%D0%B0%D0%BA_%D0%B4%D0%BE_1100_%D1%80%D1%96%D1%87%D1%87%D1%8F.jpg" alt="">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Museum_of_the_Kobzars%2C_Pereiaslav-Khmelnytskyi.JPG/1920px-Museum_of_the_Kobzars%2C_Pereiaslav-Khmelnytskyi.JPG" alt="">
+
             </div>
             
            
