--- a/auteur.html
+++ b/auteur.html
@@ -61,42 +61,13 @@
     <h3>Les chansons préférées pour ce moment</h3>
     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2oV3Nc0ziVpilCAjpRyY8E?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2jWGFfHtn6IhJxw4v0MxSn?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-    <h2>Tartak</h2>
+    <h2>Groupe préféré : Tartak</h2>
     <div class="music-box">
       <iframe src="https://open.spotify.com/embed/playlist/1iw1HyH2xFmhNH7q06sF7e?si=OAJZWcKETVqF95rywjo7HA&pi=RnSoDidFTaurk" allowfullscreen=""
       allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
       loading="lazy"></iframe>   
   </div>
-  <h2>TNMK</h2>
-  <div class="music-box">
-    <iframe src="https://open.spotify.com/embed/playlist/1I43LtYVBsZuIm340xg3fn?si=rrlr51m9RkGbkNpwDYPOBQ&pi=dHXZj0zATAakb" allowfullscreen=""
-    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-    loading="lazy"></iframe>
-  </div>
-  <h2>Zhadan i Sobaky</h2>
-  <div class="music-box">
-    <iframe src="https://open.spotify.com/embed/playlist/370yEr8aXEotCQ7xtfIixH?si=FuPCVh08ShCrayD5aSSZCQ&pi=tXn0s-WWTsuxM" allowfullscreen=""
-    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-    loading="lazy"></iframe>
-  </div>
-  <h2>TIK</h2>
-  <div class="music-box">
-    <iframe src="https://open.spotify.com/embed/playlist/5s9EBla5tc98MuMqYEcAup" allowfullscreen=""
-    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-    loading="lazy"></iframe>
-  </div>
-  <h2>Kuzma Skryabin</h2>
-  <div class="music-box">
-    <iframe src="https://open.spotify.com/embed/playlist/1ne1X7Wl1Vn8obbPbvc6Le" allowfullscreen=""
-    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-    loading="lazy"></iframe>
-  </div>
-  <h2>Autres</h2>
-  <div class="music-box">
-    <iframe src=" https://open.spotify.com/embed/playlist/2WXcNdrmBvf1Pv5F5rHpmB" allowfullscreen=""
-    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-    loading="lazy"></iframe>
-  </div>
+
  
   </section>
     </main>
