--- a/auteur.html
+++ b/auteur.html
@@ -59,6 +59,8 @@
   <section>
     <h1>La musique écoutée : </h1>
     <h3>Les chansons préférées pour ce moment</h3>
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/7jpjDGyAEiOTa74IEAIU1x?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6US12qFQkzA0OUr3um6v8E?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2oV3Nc0ziVpilCAjpRyY8E?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2jWGFfHtn6IhJxw4v0MxSn?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     <h2>Groupe préféré : Tartak</h2>
